# should-i-watch-the-game

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: winwatch-schedule.yml
src/winwatch/: __init__.py  config.py  http.py  lambda_handler.py  main.py  models.py  notifier.py  once.py  service.py
src/winwatch/providers/: base.py  bundesliga.py  nhl.py
tests/: test_config.py  test_lambda_handler.py  test_service.py
